bynkc/tests/fixtures/positive/01_minimal/input.bynk
commons demo {
  type Id = Int
}
