bynkc/tests/fixtures/negative/43_unclosed_doc_block/input.bynk
commons unclosed.demo {
  ---
  This doc never closes.
  type T = Int
}
